# games

./: CMakeLists.txt
assets/: test.lua
engine/: CMakeLists.txt
engine/dependencies/: CMakeLists.txt
engine/dependencies/glad/include/glad/: gl.h  wgl.h
engine/dependencies/glad/src/: wgl.c
engine/dependencies/lua/: CMakeLists.txt
engine/include/: engine.h  game.h  keyboard.h  logging.h  movable.h  non_copyable.h  singleton.h
engine/include/gfx/: base2d.h  instanced_mesh.h  mesh.h  shader.h  texture.h
engine/include/input/: keyboard.h  lua_console.h
engine/include/lua/: lua_console.h
engine/include/math/: grid_layout.h  vector.h
engine/include/system/: job_system.h  timer.h
engine/include/ui/: monogram_font.h  text_renderer.h
engine/src/: keyboard.cpp  logging.cpp  main.cpp
engine/src/gfx/: shader.cpp  texture.cpp
engine/src/input/: keyboard.cpp  lua_console.cpp
engine/src/lua/: lua_console.cpp
engine/src/system/: job_system.cpp  timer.cpp
engine/src/ui/: text_renderer.cpp
proto2d/: CMakeLists.txt
proto2d/include/: monogram_font.h  proto2d.h  text_renderer.h
proto2d/include/state/: log_viewer.h  terminal.h
proto2d/src/: proto2d.cpp  text_renderer.cpp
proto2d/src/state/: log_viewer.cpp  terminal.cpp
